// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trpc react generator > should generate trpc react files > TestApiClientProvider.tsx 1`] = `
"import { AppRouter } from 'backend';
import { useQueryClient } from '@tanstack/react-query';
import { createTRPCOptionsProxy } from '@trpc/tanstack-react-query';
import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import {
  HTTPLinkOptions,
  TRPCClient,
  createTRPCClient,
  httpLink,
} from '@trpc/client';

interface TestApiTRPCContextValue {
  optionsProxy: ReturnType<typeof createTRPCOptionsProxy<AppRouter>>;
  client: TRPCClient<AppRouter>;
}

export const TestApiTRPCContext = createContext<TestApiTRPCContextValue | null>(
  null,
);

export const TestApiClientProvider: FC<PropsWithChildren> = ({ children }) => {
  const queryClient = useQueryClient();
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.apis.TestApi;

  const container = useMemo<TestApiTRPCContextValue>(() => {
    const linkOptions: HTTPLinkOptions<any> = {
      url: apiUrl,
    };

    const client = createTRPCClient<AppRouter>({
      links: [httpLink(linkOptions)],
    });

    const optionsProxy = createTRPCOptionsProxy<AppRouter>({
      client,
      queryClient,
    });

    return { optionsProxy, client };
  }, [apiUrl, queryClient]);

  return (
    <TestApiTRPCContext.Provider value={container}>
      {children}
    </TestApiTRPCContext.Provider>
  );
};

export default TestApiClientProvider;
"
`;

exports[`trpc react generator > should generate trpc react files > useTestApi.tsx 1`] = `
"import { useContext } from 'react';
import { TestApiTRPCContext } from '../components/TestApiClientProvider';

export const useTestApi = () => {
  const container = useContext(TestApiTRPCContext);
  if (!container) {
    throw new Error('useTestApi must be used within TestApiClientProvider');
  }
  return container.optionsProxy;
};

export const useTestApiClient = () => {
  const container = useContext(TestApiTRPCContext);
  if (!container) {
    throw new Error(
      'useTestApiClient must be used within TestApiClientProvider',
    );
  }
  return container.client;
};
"
`;

exports[`trpc react generator > should handle Cognito auth option > TestApiClientProvider-Cognito.tsx 1`] = `
"import { AppRouter } from 'backend';
import { useQueryClient } from '@tanstack/react-query';
import { createTRPCOptionsProxy } from '@trpc/tanstack-react-query';
import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import {
  HTTPLinkOptions,
  TRPCClient,
  createTRPCClient,
  httpLink,
} from '@trpc/client';
import { useAuth } from 'react-oidc-context';

interface TestApiTRPCContextValue {
  optionsProxy: ReturnType<typeof createTRPCOptionsProxy<AppRouter>>;
  client: TRPCClient<AppRouter>;
}

export const TestApiTRPCContext = createContext<TestApiTRPCContextValue | null>(
  null,
);

export const TestApiClientProvider: FC<PropsWithChildren> = ({ children }) => {
  const queryClient = useQueryClient();
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.apis.TestApi;
  const auth = useAuth();
  const user = auth?.user;

  const container = useMemo<TestApiTRPCContextValue>(() => {
    const linkOptions: HTTPLinkOptions<any> = {
      url: apiUrl,
      headers: {
        Authorization: \`Bearer \${user?.id_token}\`,
      },
    };

    const client = createTRPCClient<AppRouter>({
      links: [httpLink(linkOptions)],
    });

    const optionsProxy = createTRPCOptionsProxy<AppRouter>({
      client,
      queryClient,
    });

    return { optionsProxy, client };
  }, [apiUrl, queryClient, user]);

  return (
    <TestApiTRPCContext.Provider value={container}>
      {children}
    </TestApiTRPCContext.Provider>
  );
};

export default TestApiClientProvider;
"
`;

exports[`trpc react generator > should handle IAM auth option > TestApiClientProvider-IAM.tsx 1`] = `
"import { AppRouter } from 'backend';
import { useQueryClient } from '@tanstack/react-query';
import { createTRPCOptionsProxy } from '@trpc/tanstack-react-query';
import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import {
  HTTPLinkOptions,
  TRPCClient,
  createTRPCClient,
  httpLink,
} from '@trpc/client';
import { useSigV4 } from '../hooks/useSigV4';

interface TestApiTRPCContextValue {
  optionsProxy: ReturnType<typeof createTRPCOptionsProxy<AppRouter>>;
  client: TRPCClient<AppRouter>;
}

export const TestApiTRPCContext = createContext<TestApiTRPCContextValue | null>(
  null,
);

export const TestApiClientProvider: FC<PropsWithChildren> = ({ children }) => {
  const queryClient = useQueryClient();
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.apis.TestApi;
  const sigv4Client = useSigV4();

  const container = useMemo<TestApiTRPCContextValue>(() => {
    const linkOptions: HTTPLinkOptions<any> = {
      url: apiUrl,
      fetch: sigv4Client,
    };

    const client = createTRPCClient<AppRouter>({
      links: [httpLink(linkOptions)],
    });

    const optionsProxy = createTRPCOptionsProxy<AppRouter>({
      client,
      queryClient,
    });

    return { optionsProxy, client };
  }, [apiUrl, queryClient, sigv4Client]);

  return (
    <TestApiTRPCContext.Provider value={container}>
      {children}
    </TestApiTRPCContext.Provider>
  );
};

export default TestApiClientProvider;
"
`;

exports[`trpc react generator > should handle IAM auth option > useSigV4.tsx 1`] = `
"import { AwsClient } from 'aws4fetch';
import { CognitoIdentityClient } from '@aws-sdk/client-cognito-identity';
import { fromCognitoIdentityPool } from '@aws-sdk/credential-provider-cognito-identity';
import { useCallback, useRef } from 'react';
import { useAuth } from 'react-oidc-context';
import { useRuntimeConfig } from './useRuntimeConfig';
import {
  AwsCredentialIdentity,
  AwsCredentialIdentityProvider,
} from '@smithy/types';

// Credential expiration grace time before considering credentials as expired
const CREDENTIAL_EXPIRY_OFFSET_MILLIS = 30 * 1000;

export const useSigV4 = () => {
  const { cognitoProps } = useRuntimeConfig();
  const auth = useAuth();
  const user = auth?.user;

  const cachedCredentials = useRef<{ [key: string]: AwsCredentialIdentity }>(
    {},
  );

  const withCachedCredentials = useCallback(
    async (
      provider: AwsCredentialIdentityProvider,
      ...cacheKeys: string[]
    ): Promise<AwsCredentialIdentity> => {
      const key = \`sigv4/\${cacheKeys.join('/')}\`;
      const cachedCreds = cachedCredentials.current[key];
      if (
        cachedCreds &&
        cachedCreds.expiration &&
        cachedCreds.expiration.getTime() >
          Date.now() + CREDENTIAL_EXPIRY_OFFSET_MILLIS
      ) {
        return cachedCreds;
      }
      const credentials = await provider();
      cachedCredentials.current[key] = credentials;
      return credentials;
    },
    [],
  );

  return useCallback(
    async (input: RequestInfo | URL, init?: RequestInit | undefined) => {
      if (!cognitoProps && import.meta.env.MODE === 'serve-local') {
        // Skip request signing in serve-local mode when cognitoProps are not set
        return fetch(input, init);
      }
      if (!cognitoProps) {
        throw new Error('cognitoProps is undefined!');
      }
      if (!user?.id_token) {
        throw new Error('user.id_token is undefined!');
      }

      const credentialsFromCognitoIdentityPool = fromCognitoIdentityPool({
        client: new CognitoIdentityClient({ region: cognitoProps.region }),
        identityPoolId: cognitoProps.identityPoolId,
        logins: {
          [\`cognito-idp.\${cognitoProps.region}.amazonaws.com/\${cognitoProps.userPoolId}\`]:
            user.id_token,
        },
      });
      const credential = await withCachedCredentials(
        credentialsFromCognitoIdentityPool,
        cognitoProps.identityPoolId,
        user.profile.sub,
      );
      const awsClient = new AwsClient(credential);
      return awsClient.fetch(input, init);
    },
    [cognitoProps, user?.id_token, user?.profile.sub, withCachedCredentials],
  );
};
"
`;

exports[`trpc react generator > should modify main.tsx correctly > main.tsx 1`] = `
"import TestApiClientProvider from './components/TestApiClientProvider';
import QueryClientProvider from './components/QueryClientProvider';
import RuntimeConfigProvider from './components/RuntimeConfig';

import { RouterProvider } from '@tanstack/react-router';

const App = () => <RouterProvider router={router} />;

export function Main() {
  return (
    <RuntimeConfigProvider>
      <QueryClientProvider>
        <TestApiClientProvider>
          <App />
        </TestApiClientProvider>
      </QueryClientProvider>
    </RuntimeConfigProvider>
  );
}
"
`;
